# anp

./: .gitignore  AGENTS.md  CLAUDE.md  README.cn.md  README.md  anp_all_sdk_list.txt  pyproject.toml
.cursor/plans/: fastanp-------55a42b3b.plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_en.yml  feature_en.yml
.github/workflows/: rust-python-interop.yml
agent_connect/anp_crawler/: readme.md
anp/: __init__.py
anp/anp_crawler/: API_IMPROVEMENTS.md  anp_client.py
anp/ap2/: README.md  __init__.py  cart_mandate.py  client.py  credential_mandate.py  merchant_agent.py  models.py  payment_mandate.py  shopper_agent.py  utils.py
anp/authentication/: __init__.py  device_manifest.py  did_wba.py  did_wba_authenticator.py  verification_methods.py
anp/direct_e2ee/: __init__.py  client.py  prekey_manager.py  v2_aad.py  v2_bundle.py  v2_errors.py  v2_models.py  v2_wire.py
anp/e2e_encryption_hpke/: message_builder.py  models.py
anp/fastanp/: README.md  fastanp.py
anp/node/: DESIGN.cn.md  DESIGN.md  RUN_METHOD_ANALYSIS.md  node.py
anp/openanp/: README.cn.md  README.md  __init__.py  (+4 more)
dart/: CHANGELOG.md  README.md  pubspec.yaml
docs/: examples.cn.md  examples.md
golang/: README.cn.md  README.md  go.mod  go.sum  key_material.go  version.go
rust/: Cargo.toml  README.md
rust/examples/: create_did_document.rs  direct_e2ee_interop_cli.rs  direct_e2ee_verify_fixture.rs  interop_cli.rs  interop_server.rs  proof_example.rs  wns_example.rs
rust/src/: canonical_json.rs  keys.rs  lib.rs
rust/src/authentication/: device_manifest.rs  did_resolver.rs  did_wba.rs  did_wba_authenticator.rs  did_wba_verifier.rs  http_signatures.rs  mod.rs  verification_methods.rs
rust/src/direct_e2ee/: aad.rs  bundle.rs  envelope.rs  mod.rs  models.rs  ratchet.rs  session.rs  v2_aad.rs  v2_bundle.rs  v2_errors.rs  v2_models.rs  v2_session.rs  v2_wire.rs  x3dh.rs
rust/src/group_e2ee/: commands.rs  mod.rs  operations.rs  storage.rs  v2_aad.rs  v2_binding.rs  v2_errors.rs  v2_models.rs  v2_wire.rs
rust/src/group_e2ee/operations/: typed.rs  v2.rs
rust/src/proof/: group_receipt.rs  im.rs  mod.rs  object_proof.rs  rfc9421_origin.rs
rust/src/wns/: binding.rs  mod.rs  models.rs  resolver.rs  validator.rs
rust/tests/: authentication_tests.rs  device_manifest_shared_fixtures.rs  direct_e2ee_v2_wire_vectors.rs  group_e2ee_contract_tests.rs  group_e2ee_real_mls_tests.rs  group_e2ee_storage_spike_tests.rs  group_e2ee_typed_operations_tests.rs  group_e2ee_v2_multi_device_mls.rs  group_e2ee_v2_operations.rs  group_e2ee_v2_wire_vectors.rs  key_pem_tests.rs  proof_tests.rs  python_interop_tests.rs  python_network_interop_tests.rs  vnext_did_builder_shared_fixtures.rs  wns_tests.rs
rust/tests/common/: mod.rs
scripts/: run_all_examples.py
tests/: __init__.py  rust_interop_config.json  test_ap2.py  test_ap2_e2e.py
typescript/: CHANGELOG.md  CONTRIBUTING.md  RELEASE_NOTES.md
(+225 files in other folders)
